# TiSD_TaDS

./: README.md
tisd2/: CMakeLists.txt  add_flat.c  bubble_sort.c  check.c  delete.c  filling_table.c  insert_sort.c  main.c  read_int.c  read_int.h  renew_table.c  show.c  structs.c  structs.h  table.h  table.txt
tisd3/: CMakeLists.txt  efficiency.c  hand_input.c  headers.h  input_auto.c  list_work.c  main.c  making_ordinary_mtr.c  multiplication.c  ord_mult.c  print.c  scanf.c  sparse_mult.c  Отчет по 3 лабораторной работе.docx
tisd4/: CMakeLists.txt  arr_funcs.c  arr_funcs.h  efficience.c  efficience.h  is_pal.c  is_pal.h  list_funcs.c  list_funcs.h  main.c  scanf.c  scanf.h  structs.h  Отчет по 4 Лабораторной работе.docx
tisd5/: Отчет по 5 лабораторной работе по предмету.docx
tisd5/array/: CMakeLists.txt  constants.h  init_automat.c  init_automat.h  main.c  queue.c  queue.h  rand.c  rand.h  refresh_automat.c  refresh_automat.h  structs.h  test.c  time.c  time.h
tisd5/list/: CMakeLists.txt  constants.h  init_automat.c  init_automat.h  main.c  queue.c  queue.h  rand.c  rand.h  refresh_automat.c  refresh_automat.h  structs.h  test.c  time.c  time.h
tisd6/: CMakeLists.txt  balance.c  balance.h  efficiency.c  efficiency.h  export.c  export.h  hash.c  hash.h  main.c  read_file.c  read_file.h  search.c  search.h  tree.c  tree.h  words.txt  Отчет по Лабораторной работе.docx
tisd7/: CMakeLists.txt  gvedit.c  gvedit.h  main.c  mtr_funcs.c  mtr_funcs.h  scan_int.c  scan_int.h  time_search.c  time_search.h  Лабораторная работа.docx
